fixed footer layout issues

--- a/src/_includes/components/css/main.css
+++ b/src/_includes/components/css/main.css
@@ -514,12 +514,18 @@ footer p {
 
 #footer-links p {
   text-align: center;
+  font-size: var(--font-size-3);
 }
 
 #footer-grid {
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-gap: 5rem;
+}
+
+#footer-grid p a {
+  text-decoration: none;
+  font-size: var(--font-size-3);
 }
 
 #email-signup {
